# mixxx-mk3

./: .gitignore  CMakeLists.txt
docs/: SETUP-GUIDE.md
docs/superpowers/plans/: 2026-03-31-mouse-mode.md  2026-03-31-settings-panel.md  2026-04-01-mk3-overlay-widget-system.md  2026-04-05-tempo-panel.md
docs/superpowers/specs/: 2026-03-31-mouse-mode-design.md  2026-03-31-settings-panel-design.md
mapping/: Native-Instruments-Maschine-MK3.hid.xml  Native-Instruments-Maschine-MK3.js
pi-setup/: 99-mk3.rules  home-zeb-Music-nas.mount  mixxx.service  mk3-bootsplash.service  mk3-bootsplash.sh  mk3-check-update.sh  mk3-mouse-daemon.py  mk3-mouse-daemon.service  mk3-overlay.service  mk3-pi-setup.sh  mk3-screen-daemon.service  mk3-settings-watcher.py  mk3-settings-watcher.service  mk3-t9-daemon.py  mk3-t9-daemon.service  mk3-update.sh  openbox.service
pi-setup/mk3_overlay/: daemon.py  renderer.py
pi-setup/mk3_overlay/widgets/: settings.py
pi-setup/tests/: test_settings.py
screen-daemon/: CMakeLists.txt  capture_x11.c
skin/MK3/: skin.xml  style.qss
